Last commit for Friday

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <h1 id="center-logo">SURF &amp; PADDLE CO.</h1>
-      <p class="project">An Ironyard Academy Project Est. Spring 2015</p>
+      <p class="project">An Ironyard Academy Project Est. Fall 2013</p>
     </div>
   </header>
   <div class="content">
