--- a/index.html
+++ b/index.html
@@ -34,57 +34,59 @@
         <h1 id="content1title">A FANTASTIC ENGAGING HEADLINE GOES HERE</h1>
         <div class="postAuthor">
           <img id="author-img1" src="images/me.jpg" alt="author image">
-          <span>Dan Edwards</span>
-          <span>on Monday Jan. 7th 4:32pm</span>
+          <a href="www.google.com" class="authorspan"><span id="authorName1">Anne Marie</span></a>
+          <a href="www.google.com" class="authorspan"><span id="on">on </span><span id="date">Monday Oct. 7th 9:22pm</span></a>
         </div>
-        <p>Focavore ea meggings, deep v gentrify bespoke butcher yr typewriter. Nisi sunt 8-bit
+        <p id="p1">Locavore ea meggings, deep v gentrify bespoke butcher yr typewriter. Nisi sunt 8-bit
         craft beer, leggings deep v biodiesel Williamsburg. Actually hashtag art party nesciunt
         squid pour-over. Kitsch Vice cray, Marfa brunch fingerstache oficcia Schlitz Blue Bottle
         cillum. Mlkshk 8-bit aliquip fingerstache sunt.</p>
-        <p>Distillery ad sriracha, synth wolf street art brunch excepteur consectetur art party irony
+        <p id="p2">Distillery ad sriracha, synth wolf street art brunch excepteur consectetur art party irony
         fugiat. Duis chia yr, pour-over Portland velit High Life non aesthetic fugiat tattoed
         shabby chic mixtape.
         </p>
-        <blockquote><p>Woah, that's radical!</p></blockquote>
-        <p>Swag nisi mixtape cray, non hashtag blog tote bag lolor bitters before they sold out ea
+        <blockquote id="blockquote"><p id="blockquotep">Woah, that's radical!</p></blockquote>
+        <p id="p3">Swag nisi mixtape cray, non hashtag blog tote bag lolor bitters before they sold out ea
         dolore. Raw denim mistape drinking vinegar, Vice 3 wolf moon authentic officia aute id.
-        Keffiyeh yr retro, salvia do alique(rollover) leggings selvage narwhal farm-to-table
+        Keffiyeh yr retro, salvia do <a href="www.google.com">alique(rollover)</a> leggings selvage narwhal farm-to-table
         dolor Tonx DIY photo booth. Bitters gastropub non 3 wolf moon Blue Bottle organic,
         cray aesthetic jean shorts velit umami. Mlkshk roof party cardigan, farm-to-table aute
         plaid wolf master cleanse. Thundercats tattoed lo-fi culpa, mollit Pinterest American
         Apparel. 3 wolf moon VHS hella, Tonx beard chambray sustainable jean shorts synth
         mlkshk fugiat excepteur banh mi eu whatever.
         </p>
-        <p>Vinyl sartorial culpa bespoke labore, ethical redymade tofu selfies ut locavore
+        <p id="p4">Vinyl sartorial culpa bespoke labore, ethical redymade tofu selfies ut locavore
         commodo mumblecore paleo typewriter. Mumblecore selfies nostrud, asymmetrcial
         90's fannypack est Blue Bottle ethnic blog. Narwhal Shoreditch fixie tofu, nisi before
         </p>
         <div id="btnContainer">
-          <a href="comment.com">
-            <div class="buttonContainer" alt="Comments">
+          <a class="buttonlink" href="comment.com">
+            <div class="buttonContainer" id="iconcontainer" alt="Comments">
               <div id="commentIcon">
-                <img id="commentImage" src="images/comments.png">
+                <img class="buttonpic" id="commentImage" src="images/comments.png">
               </div>
+              <div class="buttontext" id="commenttext">
                 <p>Read Comments</p>
+              </div>
             </div>
           </a>
-          <a href="ReadLater.com" alt="Read Later">
-            <div class="buttonContainer">
+          <a class="buttonlink" href="ReadLater.com" alt="Read Later">
+            <div class="buttonContainer" id="readlatercontainer">
               <div id="readLaterIcon">
-                <img id="readLaterImage" src="images/later.png">
+                <img class="buttonpic" id="readLaterImage" src="images/later.png">
               </div>
-              <div id="readLaterText">
+              <div class="buttontext" id="readlatertext">
                 <p>Read Later</p>
               </div>
             </div>
           </a>
-          <a href="Share.com">
-            <div class="buttonContainer" alt="Share">
+          <a class="buttonlink" href="Share.com">
+            <div class="buttonContainer" id="sharecontainer" alt="Share">
               <div id="shareIcon">
-                <img id="shareImage" src="images/share.png">
+                <img class="buttonpic" id="shareImage" src="images/share.png">
               </div>
-              <div id="shareText">
-                <p>Read Later</p>
+              <div class="buttontext" id="sharetext">
+                <p>Share This Post</p>
               </div>
             </div>
           </a>
@@ -92,6 +94,7 @@
       </div>
       <div class="content-section2">
         <img id="author-img2" src="images/me.jpg" alt="">
+        <p id="author-name">Anne Marie</p>
         <ul id="author-social-list">
           <li class="author-social">Twitter</li>
           <li class="author-social">Facbook</li>
